Fixed `font-variant: none` output.
Also removed `npm` references since I assume this repository is using Yarn based on the lock file, and added spacing in between the test CSS rules for readability.

--- a/test/fixtures/font-variant.css
+++ b/test/fixtures/font-variant.css
@@ -2,26 +2,37 @@ selector {
   font-variant-numeric: tabular-nums;
   font-variant-caps: all-small-caps;
 }
+
 selector {
   font-variant: normal;
 }
+
 selector {
   font-feature-settings: normal;
   font-variant: normal;
 }
+
+selector {
+  font-variant: none;
+}
+
 selector {
   font-variant: inherit;
 }
+
 selector {
   font-variant: small-caps oldstyle-nums;
 }
+
 selector {
   font-feature-settings: "onum";
   font-variant: all-small-caps;
 }
+
 selector {
   font-variant-position: normal;
 }
+
 selector {
   font-kerning: normal;
 }
